adjust for mobile billboard dash

--- a/projects/billboard-dash/billboard-dash.html
+++ b/projects/billboard-dash/billboard-dash.html
@@ -14,7 +14,7 @@ made my favorite musicians famous, from ABBA to ZZ Top, from 1958 to 2021 (the l
 <br><br>
 
 <div class='tableauPlaceholder' id='viz1745379927568' 
-style='position: relative; right: 300px; border-style: solid; border-radius: 25px'><noscript><a href='#'><img
+style='position: relative; border-style: solid; border-radius: 25px'><noscript><a href='#'><img
                 alt='The Dash '
                 src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bi&#47;BillboardHot100-ArtistExplorer&#47;TheDash&#47;1_rss.png'
                 style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
