--- a/projects/billboard-dash/billboard-dash.html
+++ b/projects/billboard-dash/billboard-dash.html
@@ -15,15 +15,15 @@ made my favorite musicians famous, from ABBA to ZZ Top, from 1958 to 2021 (the l
 
 
 <br><br>
-
-<div class='tableauPlaceholder' id='viz1745553750709' style='position: relative'><noscript><a href='#'><img
+<div class='tableauPlaceholder' id='viz1745556480908' style='position: relative'><noscript><a href='#'><img
                 alt='The Dash '
                 src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bi&#47;BillboardHot100-ArtistExplorer_17455436978690&#47;TheDash&#47;1_rss.png'
                 style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
         <param name='embed_code_version' value='3' />
-        <param name='path'
-            value='views&#47;BillboardHot100-ArtistExplorer_17455436978690&#47;TheDash?:language=en-US&amp;:embed=true&amp;publish=yes&amp;:sid=&amp;:redirect=auth' />
+        <param name='site_root' value='' />
+        <param name='name' value='BillboardHot100-ArtistExplorer_17455436978690&#47;TheDash' />
+        <param name='tabs' value='no' />
         <param name='toolbar' value='yes' />
         <param name='static_image'
             value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bi&#47;BillboardHot100-ArtistExplorer_17455436978690&#47;TheDash&#47;1.png' />
@@ -36,4 +36,4 @@ made my favorite musicians famous, from ABBA to ZZ Top, from 1958 to 2021 (the l
         <param name='filter' value='publish=yes' />
     </object></div>
 <script
-    type='text/javascript'>                    var divElement = document.getElementById('viz1745553750709'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1080px'; vizElement.style.height = '1307px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1080px'; vizElement.style.height = '1307px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1227px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    type='text/javascript'>                    var divElement = document.getElementById('viz1745556480908'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1080px'; vizElement.style.height = '1307px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1080px'; vizElement.style.height = '1307px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1427px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
