--- a/projects/billboard-dash/billboard-dash.html
+++ b/projects/billboard-dash/billboard-dash.html
@@ -34,6 +34,7 @@ made my favorite musicians famous, from ABBA to ZZ Top, from 1958 to 2021 (the l
         <param name='display_count' value='yes' />
         <param name='language' value='en-US' />
         <param name='filter' value='publish=yes' />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </object></div>
 <script
     type='text/javascript'>                    var divElement = document.getElementById('viz1745556480908'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1080px'; vizElement.style.height = '1307px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1080px'; vizElement.style.height = '1307px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1427px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
