--- a/projects/billboard-dash/billboard-dash.html
+++ b/projects/billboard-dash/billboard-dash.html
@@ -18,7 +18,7 @@ made my favorite musicians famous, from ABBA to ZZ Top, from 1958 to 2021 (the l
 <div class='tableauPlaceholder' id='viz1745556480908' style='position: relative'><noscript><a href='#'><img
                 alt='The Dash '
                 src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bi&#47;BillboardHot100-ArtistExplorer_17455436978690&#47;TheDash&#47;1_rss.png'
-                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                style='border: solid; border-radius: 25px;' /></a></noscript><object class='tableauViz' style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
         <param name='embed_code_version' value='3' />
         <param name='site_root' value='' />
