more text updates

--- a/projects/death-metal-detector/death-metal-detector.html
+++ b/projects/death-metal-detector/death-metal-detector.html
@@ -22,7 +22,7 @@ I'm gonna assume already know what Heavy Metal is.
 If you're a fan, then you probably also know about Death Metal. If not...<br><br>
 
 <blockquote cite="https://en.wikipedia.org/wiki/Death_metal">
-Death metal is an extreme subgenre of heavy metal music. It typically employs heavily distorted and low-tuned guitars, played with techniques such as palm muting and tremolo picking...
+Death metal is an extreme subgenre of heavy metal music...played with techniques such as...deep growling vocals; aggressive, powerful drumming, featuring double kick and blast beat techniques... 
 <b><u>The lyrical themes of death metal may include slasher film-style violence, political conflict, religion, nature, philosophy, true crime and science fiction.</u></b>
 
 <br><br>
@@ -34,14 +34,7 @@ Death metal is an extreme subgenre of heavy metal music. It typically employs he
 <br>
 
 Fans know that Death Metal lyrics have a certain edge to them above and beyond what Ozzy Osbourne was doing in the 70s. 
-
-The animated comedy show Metalocalypse contained a lot of satire on how these lyrics can be controversial to the point of absurdity.
-
-The frontman of the titular band would delight in hearing about horrific events, commenting his catchphrase with a grin, "That's pretty brutal."
-
-<br><br>
-
-I had a suspicion that Death Metal might use a unique and detectable "language" even when the subject of a song is something other than a horror movie synopsis.
+But I suspected that Death Metal might use a unique and detectable "language" even when the subject of a song is something other than a horror movie synopsis.
 
 With that hypothesis in mind, I developed a text analysis model you can try out yourself below. <br><br>
 
