and did we mention text updates

--- a/projects/death-metal-detector/death-metal-detector.html
+++ b/projects/death-metal-detector/death-metal-detector.html
@@ -45,8 +45,7 @@ width="200%" height="1250" title="Death Metal Detector"
 ></iframe> 
 </div>
 
-My model identifies classic Death Metal staples like Cannibal Corpse or Morbid Angel as having a +95% "brutality" score, as well as more recent acts like Archspire. Classic heavy metal like Ozzy or Iron Maiden usually scores in the 60-80% range. 
-Still more brutal than say, the Rolling Stones but less so than their extreme metal successors. Non-metal acts like Taylor Swift will barely move the needle.
+My model identifies classic Death Metal staples like Cannibal Corpse or Morbid Angel as having a +95% "brutality" score. Classic heavy metal like Ozzy or Iron Maiden usually scores in the 60-80% range. Non-metal acts like Taylor Swift will barely move the needle.
 
 
 
