add notebook / instructions

--- a/projects/death-metal-detector/tool.html
+++ b/projects/death-metal-detector/tool.html
@@ -35,18 +35,12 @@ I suspected that Death Metal might use a unique and detectable "language" even w
 other than a horror movie synopsis.<br><br>
 
 Based on this hypothesis, I built The Death Metal Detector. It's a Complement Naive Bayes machine learning model, 
-trained on TF-IDF transformed data on over 200,000 songs. This "scores" the lyrics you give it on a scale from 0% to 100%.<br><br>
+trained on TF-IDF transformed data on over 200,000 songs. This "scores" the brutality of the lyrics you provide on a scale from 0% to 100%!<br><br>
 
-Technically, this score represents the model's confidence in identifying the song as Death Metal. However, I prefer to call 
-it the song's "brutality" score, based on a common adjective that fans use to describe their favorite Death Metal songs. <br><br>
+Try it out below! Copy/paste lyrics from your favorite songs, metal or not, or come up with your own gutteral incantations and see how <b><i>brutal</i></b> they are!
 
-It also reflects how the model treats songs Death Metal's relatives. Genre staples like Cannibal Corpse or 
-Morbid Angel usually +95% confidence. Classic heavy metal like Ozzy or Iron Maiden, brutal in its own right but not to the same degree,
-usually scores in the 60-80% range. Non-metal acts like Taylor Swift will barely move the needle.
+When you're done, <a href='pt1-getting-the-data.md'>read about how you can create your own.</a>
 
-<br><br>
-
-Try it out below! Copy/paste lyrics from your favorite songs, or come up with your own gutteral incantations and see if they're worthy!<br><br>
 
 <div class="container-iframe">
 <iframe 
